# autocommit-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: classifier.rs  config.rs  diff.rs  gemini.rs  generator.rs  git.rs  main.rs  openai.rs  prompts.rs  setup.rs  types.rs  ui.rs
src/ai/: gemini.rs  mod.rs  openai.rs  prompts.rs
src/cli/: mod.rs  setup.rs
src/git/: diff.rs  mod.rs
